2019-06-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-generate-new-buffer):
	Work regardless of w3m-use-title-buffer-name ([emacs-w3m:13441]). NOTE:
	This is a bad commit that needed to be reverted.

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	(w3m-select-buffer-horizontal-window): Change default to nil, ie.
	vertical window, for better viewing

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--get-page-anchors): New funcion.
	(w3m-search-name-anchor): Prompt user interactively with list of
	available anchors, excluding those from w3m half-dump. Provide this
	function a keybinding `C-c j'.

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-copy-buffer): revert function to older version.

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-copy-buffer): Bugfix: should not be copying all local variables.

	(w3m--setup-popup-window): Bugfix for toggling horizontal or vertical display.

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m-generate-new-buffer): Bugfixes in positioning of new buffers.

	* w3m.el (w3m-new-session-last): New defcustom to control position of new tabs
	in list of tabs.
	(w3m-goto-url-new-session): Use the new variable.
	(w3m-use-title-buffer-name): Improve docstring.

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-view-this-url-new-session)
	(w3m--goto-url--handler-function, w3m-goto-url-new-session)
	(w3m-view-this-url-1): Partial merge of bb-upstream 6c42578b

2019-06-06  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-select-next-line, w3m-select-previous-line): New
	functions, to maintain column position when navigation buffer-selection
	pop-up.
	(w3m-select-buffer-mode-map, w3m-select-buffer-next-line): Use the new functions.
	(w3m-select-buffer-show-this-line): maintain column position.
	(w3m-select-buffer-next-line): Remove Xemacs support

2019-05-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	Bugfix ([emacs-w3m:13417])
